--- a/index.html
+++ b/index.html
@@ -145,30 +145,30 @@
         .options {
             display: grid;
             grid-template-columns: repeat(3, 1fr);
-            gap: 1rem;
+            gap: 0.85rem;
             margin: 0 auto;
-            max-width: 420px;
+            max-width: 480px;
             width: 100%;
         }
 
         .option-button {
-            background: linear-gradient(145deg, rgba(20, 70, 35, 0.5) 0%, rgba(12, 45, 22, 0.6) 100%);
-            border: 1px solid rgba(100, 200, 130, 0.25);
-            border-radius: 20px;
-            padding: 1.25rem 0.75rem;
+            background: linear-gradient(145deg, rgba(22, 72, 38, 0.45) 0%, rgba(14, 48, 24, 0.55) 100%);
+            border: 1px solid rgba(110, 210, 140, 0.22);
+            border-radius: 18px;
+            padding: 1rem 0.6rem;
             color: #fff;
             cursor: pointer;
-            transition: transform 0.28s cubic-bezier(0.34, 1.4, 0.64, 1), box-shadow 0.35s ease, border-color 0.3s ease, background 0.3s ease;
+            transition: transform 0.25s cubic-bezier(0.34, 1.4, 0.64, 1), box-shadow 0.3s ease, border-color 0.25s ease, background 0.25s ease;
             text-decoration: none;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            gap: 0.5rem;
-            box-shadow: 0 8px 24px rgba(0, 0, 0, 0.25), inset 0 1px 0 rgba(255, 255, 255, 0.06);
-            min-height: 88px;
+            gap: 0.4rem;
+            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.22), inset 0 1px 0 rgba(255, 255, 255, 0.05);
+            min-height: 76px;
             aspect-ratio: 1;
-            backdrop-filter: blur(12px);
+            backdrop-filter: blur(14px);
         }
 
         .option-button:hover {
@@ -185,16 +185,16 @@
         }
 
         .option-button i {
-            font-size: 1.75rem;
-            opacity: 0.95;
+            font-size: 1.5rem;
+            opacity: 0.92;
         }
 
         .option-label {
-            font-size: 0.65rem;
+            font-size: 0.6rem;
             font-weight: 500;
-            letter-spacing: 0.15em;
+            letter-spacing: 0.12em;
             text-transform: uppercase;
-            color: rgba(200, 255, 220, 0.75);
+            color: rgba(190, 255, 210, 0.78);
         }
 
         .modal {
@@ -281,6 +281,18 @@
         .modal-title i {
             font-size: 1.35rem;
             opacity: 0.9;
+        }
+        .modal-subtitle {
+            font-size: 0.75rem;
+            color: rgba(180, 255, 200, 0.6);
+            margin-top: -0.75rem;
+            margin-bottom: 1rem;
+            letter-spacing: 0.08em;
+        }
+        .muscle-label {
+            font-size: 0.85rem;
+            color: rgba(200, 255, 220, 0.85);
+            margin-bottom: 0.5rem;
         }
 
         .weather-content {
@@ -602,6 +614,89 @@
             border-color: rgba(140, 230, 170, 0.6);
         }
 
+        .lifts-list, .mood-list {
+            margin-bottom: 1.25rem;
+            max-height: 220px;
+            overflow-y: auto;
+        }
+        .lift-item, .mood-item {
+            padding: 0.9rem 1.1rem;
+            margin-bottom: 0.6rem;
+            background: rgba(20, 55, 30, 0.4);
+            border-radius: 12px;
+            border: 1px solid rgba(100, 200, 130, 0.15);
+            border-left: 4px solid rgba(120, 220, 150, 0.5);
+        }
+        .lift-item .lift-who, .mood-item .mood-who {
+            font-size: 0.8rem;
+            font-weight: 600;
+            color: rgba(200, 255, 220, 0.9);
+            margin-bottom: 0.25rem;
+        }
+        .lift-item .lift-muscles {
+            font-size: 0.9rem;
+            color: rgba(230, 255, 240, 0.9);
+        }
+        .lift-item .lift-date, .mood-item .mood-time {
+            font-size: 0.7rem;
+            color: rgba(180, 255, 200, 0.5);
+            margin-top: 0.4rem;
+        }
+        .mood-item .mood-score {
+            font-size: 1.1rem;
+            font-weight: 600;
+            color: rgba(255, 255, 255, 0.95);
+        }
+        .mood-item .mood-note {
+            font-size: 0.9rem;
+            color: rgba(230, 255, 240, 0.85);
+            margin-top: 0.35rem;
+        }
+        .muscle-grid {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 0.5rem;
+            margin-bottom: 1rem;
+        }
+        .muscle-chip {
+            display: inline-flex;
+            align-items: center;
+            gap: 0.35rem;
+            padding: 0.5rem 0.75rem;
+            font-size: 0.85rem;
+            font-family: inherit;
+            color: rgba(255, 255, 255, 0.9);
+            background: rgba(25, 65, 35, 0.5);
+            border: 1px solid rgba(100, 200, 130, 0.3);
+            border-radius: 999px;
+            cursor: pointer;
+            transition: background 0.2s ease, border-color 0.2s ease;
+        }
+        .muscle-chip:hover { background: rgba(35, 85, 45, 0.55); }
+        .muscle-chip input { display: none; }
+        .muscle-chip.selected { background: rgba(80, 180, 110, 0.4); border-color: rgba(120, 220, 150, 0.6); }
+        .mood-scale-wrap {
+            margin-bottom: 1rem;
+        }
+        .mood-scale-wrap label {
+            display: block;
+            font-size: 0.85rem;
+            color: rgba(200, 255, 220, 0.85);
+            margin-bottom: 0.5rem;
+        }
+        .mood-scale-wrap input[type="range"] {
+            width: 100%;
+            max-width: 280px;
+            height: 8px;
+            accent-color: rgba(120, 220, 150, 0.9);
+        }
+        .mood-scale-value {
+            font-size: 1.25rem;
+            font-weight: 600;
+            color: rgba(255, 255, 255, 0.95);
+            margin-top: 0.35rem;
+        }
+
         @media (max-width: 768px) {
             html, body {
                 height: 100dvh !important;
@@ -632,9 +727,12 @@
                 max-width: 100%;
             }
 
+            .options {
+                max-width: 100%;
+            }
             .option-button {
-                padding: 0.9rem 0.5rem;
-                min-height: 78px;
+                padding: 0.75rem 0.4rem;
+                min-height: 68px;
             }
 
             .option-button i {
@@ -688,6 +786,8 @@
             <button class="option-button" onclick="showMusic()" title="music"><i class="bi bi-music-note-beamed"></i><span class="option-label">music</span></button>
             <button class="option-button" onclick="showTimeline()" title="timeline"><i class="bi bi-calendar3"></i><span class="option-label">timeline</span></button>
             <button class="option-button" onclick="showMessages()" title="leave a message"><i class="bi bi-chat-dots"></i><span class="option-label">messages</span></button>
+            <button class="option-button" onclick="showLifts()" title="gym / lifts"><i class="bi bi-heart-pulse"></i><span class="option-label">lifts</span></button>
+            <button class="option-button" onclick="showMood()" title="how we're feeling"><i class="bi bi-emoji-smile"></i><span class="option-label">mood</span></button>
         </div>
         <p class="moon-phase" id="moonPhase"></p>
     </div>
@@ -828,6 +928,49 @@
                 </select>
                 <textarea id="messageText" class="message-text" placeholder="Leave a message..." rows="3" required></textarea>
                 <button type="submit" class="message-submit">Send</button>
+            </form>
+        </div>
+    </div>
+
+    <!-- Lifts Modal (Supabase) -->
+    <div id="liftsModal" class="modal">
+        <div class="modal-content">
+            <button class="close-button" onclick="closeModal('liftsModal')">&times;</button>
+            <h2 class="modal-title"><i class="bi bi-heart-pulse" aria-hidden="true"></i> lifts</h2>
+            <p class="modal-subtitle">JMU UREC · Penn State</p>
+            <div id="liftsList" class="lifts-list"></div>
+            <form id="liftsForm" class="message-form">
+                <select id="liftsFrom" class="message-from" required aria-label="Who is logging">
+                    <option value="">— who's logging? —</option>
+                    <option value="Will">Will</option>
+                    <option value="Jolene">Jolene</option>
+                </select>
+                <p class="muscle-label">Muscle groups today</p>
+                <div id="muscleGrid" class="muscle-grid"></div>
+                <button type="submit" class="message-submit">Log workout</button>
+            </form>
+        </div>
+    </div>
+
+    <!-- Mood Modal (Supabase) -->
+    <div id="moodModal" class="modal">
+        <div class="modal-content">
+            <button class="close-button" onclick="closeModal('moodModal')">&times;</button>
+            <h2 class="modal-title"><i class="bi bi-emoji-smile" aria-hidden="true"></i> how we're feeling</h2>
+            <div id="moodList" class="mood-list"></div>
+            <form id="moodForm" class="message-form">
+                <select id="moodFrom" class="message-from" required aria-label="Who is logging">
+                    <option value="">— who's logging? —</option>
+                    <option value="Will">Will</option>
+                    <option value="Jolene">Jolene</option>
+                </select>
+                <div class="mood-scale-wrap">
+                    <label>How are you feeling? (1–10)</label>
+                    <input type="range" id="moodScore" min="1" max="10" value="7" aria-label="Mood 1 to 10">
+                    <p class="mood-scale-value" id="moodScoreValue">7</p>
+                </div>
+                <textarea id="moodNote" class="message-text" placeholder="Optional note..." rows="2"></textarea>
+                <button type="submit" class="message-submit">Save</button>
             </form>
         </div>
     </div>
@@ -1342,6 +1485,129 @@
                     alert('Could not send. Check RLS allows insert.');
                 }
                 if (submitBtn) { submitBtn.disabled = false; submitBtn.textContent = 'Send'; }
+            });
+        });
+
+        // Lifts: muscle groups and UI
+        var MUSCLE_GROUPS = ['Chest', 'Back', 'Shoulders', 'Biceps', 'Triceps', 'Legs', 'Core'];
+        var muscleChipsBuilt = false;
+        function buildMuscleGrid() {
+            var grid = document.getElementById('muscleGrid');
+            if (!grid || muscleChipsBuilt) return;
+            muscleChipsBuilt = true;
+            MUSCLE_GROUPS.forEach(function(m) {
+                var label = document.createElement('label');
+                label.className = 'muscle-chip';
+                label.innerHTML = '<input type="checkbox" name="muscle" value="' + m + '"> ' + m;
+                label.addEventListener('click', function() {
+                    var cb = label.querySelector('input');
+                    cb.checked = !cb.checked;
+                    label.classList.toggle('selected', cb.checked);
+                });
+                grid.appendChild(label);
+            });
+        }
+        function getSelectedMuscles() {
+            var checkboxes = document.querySelectorAll('#muscleGrid input:checked');
+            return Array.from(checkboxes).map(function(cb) { return cb.value; }).join(', ');
+        }
+
+        async function loadLifts(client) {
+            var listEl = document.getElementById('liftsList');
+            if (!listEl) return;
+            if (!client) { listEl.innerHTML = '<p class="loading">Could not load. Check connection.</p>'; return; }
+            listEl.innerHTML = '<p class="loading">loading...</p>';
+            try {
+                var res = await client.from('lifts').select('id, from_name, muscles, log_date, created_at').order('created_at', { ascending: false }).limit(30);
+                var data = res.data, error = res.error;
+                if (error) throw error;
+                if (!data || data.length === 0) { listEl.innerHTML = '<p class="loading">No lifts yet. Log one below.</p>'; return; }
+                listEl.innerHTML = data.map(function(row) {
+                    var date = row.log_date ? new Date(row.log_date + 'Z').toLocaleDateString(undefined, { weekday: 'short', month: 'short', day: 'numeric' }) : '';
+                    var who = (row.from_name || '').replace(/</g, '&lt;');
+                    var muscles = (row.muscles || '').replace(/</g, '&lt;');
+                    return '<div class="lift-item"><p class="lift-who">' + who + '</p><p class="lift-muscles">' + muscles + '</p><p class="lift-date">' + date + '</p></div>';
+                }).join('');
+            } catch (err) {
+                listEl.innerHTML = '<p class="loading">Run supabase_tables.sql in Supabase first, then try again.</p>';
+                console.error(err);
+            }
+        }
+        function showLifts() {
+            showModal('liftsModal');
+            buildMuscleGrid();
+            getSupabase(function(c) { loadLifts(c); });
+        }
+        document.getElementById('liftsForm')?.addEventListener('submit', async function(e) {
+            e.preventDefault();
+            var from = document.getElementById('liftsFrom')?.value?.trim();
+            var muscles = getSelectedMuscles();
+            if (!from || !muscles) { alert('Pick who and at least one muscle group.'); return; }
+            var btn = this.querySelector('.message-submit');
+            if (btn) { btn.disabled = true; btn.textContent = 'Logging...'; }
+            getSupabase(async function(client) {
+                if (!client) { if (btn) { btn.disabled = false; btn.textContent = 'Log workout'; } return; }
+                try {
+                    var err = (await client.from('lifts').insert([{ from_name: from, muscles: muscles }])).error;
+                    if (err) throw err;
+                    document.querySelectorAll('#muscleGrid input:checked').forEach(function(cb) { cb.checked = false; });
+                    document.querySelectorAll('#muscleGrid .muscle-chip').forEach(function(el) { el.classList.remove('selected'); });
+                    await loadLifts(client);
+                } catch (err) { console.error(err); alert('Could not save. Run supabase_tables.sql if you haven’t.'); }
+                if (btn) { btn.disabled = false; btn.textContent = 'Log workout'; }
+            });
+        });
+
+        // Mood: slider + load/save
+        document.getElementById('moodScore')?.addEventListener('input', function() {
+            var v = document.getElementById('moodScoreValue');
+            if (v) v.textContent = this.value;
+        });
+        async function loadMood(client) {
+            var listEl = document.getElementById('moodList');
+            if (!listEl) return;
+            if (!client) { listEl.innerHTML = '<p class="loading">Could not load.</p>'; return; }
+            listEl.innerHTML = '<p class="loading">loading...</p>';
+            try {
+                var res = await client.from('mood').select('id, from_name, score, note, created_at').order('created_at', { ascending: false }).limit(20);
+                var data = res.data, error = res.error;
+                if (error) throw error;
+                if (!data || data.length === 0) { listEl.innerHTML = '<p class="loading">No check-ins yet.</p>'; return; }
+                listEl.innerHTML = data.map(function(row) {
+                    var time = row.created_at ? new Date(row.created_at).toLocaleString(undefined, { dateStyle: 'short', timeStyle: 'short' }) : '';
+                    var who = (row.from_name || '').replace(/</g, '&lt;');
+                    var note = (row.note || '').replace(/</g, '&lt;').replace(/\n/g, '<br>');
+                    return '<div class="mood-item"><p class="mood-who">' + who + '</p><p class="mood-score">' + row.score + '/10</p>' + (note ? '<p class="mood-note">' + note + '</p>' : '') + '<p class="mood-time">' + time + '</p></div>';
+                }).join('');
+            } catch (err) {
+                listEl.innerHTML = '<p class="loading">Run supabase_tables.sql in Supabase first.</p>';
+                console.error(err);
+            }
+        }
+        function showMood() {
+            showModal('moodModal');
+            var scoreEl = document.getElementById('moodScore');
+            var valueEl = document.getElementById('moodScoreValue');
+            if (scoreEl && valueEl) valueEl.textContent = scoreEl.value;
+            getSupabase(function(c) { loadMood(c); });
+        }
+        document.getElementById('moodForm')?.addEventListener('submit', async function(e) {
+            e.preventDefault();
+            var from = document.getElementById('moodFrom')?.value?.trim();
+            var score = parseInt(document.getElementById('moodScore')?.value || '5', 10);
+            var note = document.getElementById('moodNote')?.value?.trim() || null;
+            if (!from) return;
+            var btn = this.querySelector('.message-submit');
+            if (btn) { btn.disabled = true; btn.textContent = 'Saving...'; }
+            getSupabase(async function(client) {
+                if (!client) { if (btn) { btn.disabled = false; btn.textContent = 'Save'; } return; }
+                try {
+                    var err = (await client.from('mood').insert([{ from_name: from, score: score, note: note }])).error;
+                    if (err) throw err;
+                    document.getElementById('moodNote').value = '';
+                    await loadMood(client);
+                } catch (err) { console.error(err); alert('Could not save. Run supabase_tables.sql if you haven’t.'); }
+                if (btn) { btn.disabled = false; btn.textContent = 'Save'; }
             });
         });
 
